crates/parser/src/snapshots/parser__tests__parse_inline_ok@0101_declare_with_attrs.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare foo : [Int] -> Int [100 left-assoc bar [int->nat]]\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0101_declare_with_attrs.ath
---
INFIX_DECLARE_DIR
  DECLARE_KW "declare"
  WHITESPACE " "
  NAME
    IDENT "foo"
  WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  FUNC_SORTS
    L_BRACK "["
    IDENT_SORT
      NAME_REF
        IDENT "Int"
    R_BRACK "]"
  WHITESPACE " "
  THIN_ARROW "->"
  WHITESPACE " "
  IDENT_SORT
    NAME_REF
      IDENT "Int"
  WHITESPACE " "
  DECLARE_ATTRS
    L_BRACK "["
    DECLARE_ATTR
      NAME
        IDENT "100"
    WHITESPACE " "
    DECLARE_ATTR
      LEFT_ASSOC_KW "left-assoc"
    WHITESPACE " "
    DECLARE_ATTR
      NAME
        IDENT "bar"
    WHITESPACE " "
    INPUT_TRANSFORM_DECL
      L_BRACK "["
      IDENT_EXPR
        NAME_REF
          IDENT "int->nat"
      R_BRACK "]"
    R_BRACK "]"
  WHITESPACE "\n"

