crates/parser/src/snapshots/parser__tests__parse_inline_ok@0102_source_file_with_semicolon.ath.snap
---
source: crates/parser/src/tests.rs
description: "domain Bar;\ndomain Foo\n"
input_file: crates/parser/test_data/parser/inline/ok/file/0102_source_file_with_semicolon.ath
---
SOURCE_FILE
  DIR_STMT
    DOMAIN_DIR
      DOMAIN_KW "domain"
      WHITESPACE " "
      IDENT_SORT
        IDENTIFIER
          IDENT "Bar"
  SEMI ";"
  WHITESPACE "\n"
  DIR_STMT
    DOMAIN_DIR
      DOMAIN_KW "domain"
      WHITESPACE " "
      IDENT_SORT
        IDENTIFIER
          IDENT "Foo"
          WHITESPACE "\n"

