crates/parser/src/snapshots/parser__tests__parse_inline_ok@0103_structure_stmt.ath.snap
---
source: crates/parser/src/tests.rs
description: "structure Foo := bar | (baz num:Int)\n"
input_file: crates/parser/test_data/parser/inline/ok/stmt/0103_structure_stmt.ath
---
STRUCTURE_STMT
  STRUCTURE_KW "structure"
  WHITESPACE " "
  STRUCTURE_DEF
    STRUCTURE_NAME_DEF
      IDENT_SORT
        IDENTIFIER
          IDENT "Foo"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    CONSTANT_CONSTRUCTOR
      IDENTIFIER
        IDENT "bar"
    WHITESPACE " "
    PIPE "|"
    WHITESPACE " "
    COMPOUND_CONSTRUCTOR
      L_PAREN "("
      IDENTIFIER
        IDENT "baz"
      WHITESPACE " "
      MAYBE_TAGGED_SORT_DECL
        IDENTIFIER
          IDENT "num"
        COLON ":"
        IDENT_SORT
          IDENTIFIER
            IDENT "Int"
      R_PAREN ")"
  WHITESPACE "\n"

