crates/parser/src/snapshots/parser__tests__parse_inline_ok@0110_module_directive.ath.snap
---
source: crates/parser/src/tests.rs
description: "module foo { declare joe: Person }\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0110_module_directive.ath
---
MODULE_DIR
  MODULE_KW "module"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  DIR_STMT
    INFIX_DECLARE_DIR
      DECLARE_KW "declare"
      WHITESPACE " "
      IDENTIFIER
        IDENT "joe"
      COLON ":"
      WHITESPACE " "
      IDENT_SORT
        IDENTIFIER
          IDENT "Person"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

