crates/parser/src/snapshots/parser__tests__parse_inline_ok@0112_define_multi_private.ath.snap
---
source: crates/parser/src/tests.rs
description: "private define [a b] := [1 2]\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0112_define_multi_private.ath
---
INFIX_DEFINE_DIR
  PRIVATE_KW "private"
  WHITESPACE " "
  DEFINE_KW "define"
  WHITESPACE " "
  LIST_PAT
    L_BRACK "["
    IDENT_PAT
      IDENTIFIER
        IDENT "a"
    WHITESPACE " "
    IDENT_PAT
      IDENTIFIER
        IDENT "b"
    R_BRACK "]"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  EXPR_PHRASE
    LIST_EXPR
      L_BRACK "["
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "1"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "2"
      R_BRACK "]"
  WHITESPACE "\n"

