crates/parser/src/snapshots/parser__tests__parse_inline_ok@0113_define_private.ath.snap
---
source: crates/parser/src/tests.rs
description: "private define bar := false\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0113_define_private.ath
---
DEFINE_DIR
  PRIVATE_KW "private"
  WHITESPACE " "
  DEFINE_KW "define"
  WHITESPACE " "
  IDENTIFIER
    IDENT "bar"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "false"
  WHITESPACE "\n"

