crates/parser/src/snapshots/parser__tests__parse_inline_ok@0114_define_proc_private.ath.snap
---
source: crates/parser/src/tests.rs
description: "private define (foo b) := b\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0114_define_proc_private.ath
---
INFIX_DEFINE_DIR
  PRIVATE_KW "private"
  WHITESPACE " "
  DEFINE_KW "define"
  WHITESPACE " "
  DEFINE_PROC
    L_PAREN "("
    NAME
      IDENT "foo"
    WHITESPACE " "
    NAME
      IDENT "b"
    R_PAREN ")"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "b"
  WHITESPACE "\n"

